--- a/static/index.html
+++ b/static/index.html
@@ -8,17 +8,17 @@
 </head>
 
 <body>
-    <header>
-        <h1>リバーシで学ぶアプリケーション設計入門</h1>
-    </header>
-    <main>
-        <div class="warning-message-area">
-            <p class="warning-message">白の番はスキップです</p>
-        </div>
-        <div id="board" class="board"></div>
-        <p>次は黒の番です</p>
-    </main>
-    <script src="main.js"></script>
+<header>
+    <h1>リバーシで学ぶアプリケーション設計入門</h1>
+</header>
+<main>
+    <div class="warning-message-area">
+        <p class="warning-message">白の番はスキップです</p>
+    </div>
+    <div id="board" class="board"></div>
+    <p id="next-disc-message">次は黒の番です</p>
+</main>
+<script src="main.js"></script>
 </body>
 
 </html>
